# rustech

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml  config
index/: index.html
scripts/: get_courses.py
src/: apis.rs  encrypt.rs  lib.rs  login.rs  main.rs  structures.rs  urls.rs
